// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot tests opens clicked section 1`] = `
<ul>
  // Printing new array of sections that also includes the element // Cannot print object if it's just this.props.sections
  <li
    key="0"
  >
    <button
      onClick={[Function]}
    >
      Section 1
    </button>
    <p>
      Lorem ipsum dolor sit amet consectetur adipisicing elit.
    </p>
  </li>
  <li
    key="1"
  >
    <button
      onClick={[Function]}
    >
      Section 2
    </button>
  </li>
  <li
    key="2"
  >
    <button
      onClick={[Function]}
    >
      Section 3
    </button>
  </li>
</ul>
`;

exports[`Snapshot tests opens last section when multiple sections have been clicked 1`] = `
<ul>
  // Printing new array of sections that also includes the element // Cannot print object if it's just this.props.sections
  <li
    key="0"
  >
    <button
      onClick={[Function]}
    >
      Section 1
    </button>
  </li>
  <li
    key="1"
  >
    <button
      onClick={[Function]}
    >
      Section 2
    </button>
  </li>
  <li
    key="2"
  >
    <button
      onClick={[Function]}
    >
      Section 3
    </button>
    <p>
      Animi amet cumque sint cupiditate officia ab voluptatibus libero optio et?
    </p>
  </li>
</ul>
`;

exports[`Snapshot tests renders no sections as active by default 1`] = `
<ul>
  // Printing new array of sections that also includes the element // Cannot print object if it's just this.props.sections
  <li
    key="0"
  >
    <button
      onClick={[Function]}
    >
      Section 1
    </button>
  </li>
  <li
    key="1"
  >
    <button
      onClick={[Function]}
    >
      Section 2
    </button>
  </li>
  <li
    key="2"
  >
    <button
      onClick={[Function]}
    >
      Section 3
    </button>
  </li>
</ul>
`;

exports[`Snapshot tests renders when prop is not supplied 1`] = `
<ul>
  // Printing new array of sections that also includes the element // Cannot print object if it's just this.props.sections
</ul>
`;
